# bluecoins-txn-helper

./: .gitignore  CMakeLists.txt  README.md  bluecoins.fydb  sbi-txns.xls  test.xls
.devcontainer/: Dockerfile
include/: BasicExcel.hpp  BluecoinsTransaction.hpp  IBluecoinsTransactionWriter.hpp  ITransactionTransformer.hpp  IXlsTransactionReader.hpp  Transaction.hpp  db.hpp  globals.h  helper.hpp
lib/: libxlsreader.la  libxlsreader.so.8
src/: BasicExcel.cpp  BluecoinsCsvWriter.cpp  BluecoinsTransformer.cpp  FileTransactionReader.cpp  XlsTransactionReader.cpp  db.cpp  globals.cpp  helper.cpp  main.cpp
